<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/countTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="300dp"
        android:text="@string/text_lv_start"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/button_reset"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/text_lv_reset"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_start"
        app:layout_constraintTop_toTopOf="@+id/button_start" />

    <Button
        android:id="@+id/bt_up_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/text_lv_up_second"
        app:layout_constraintEnd_toStartOf="@+id/bt_up_minutes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start" />

    <Button
        android:id="@+id/bt_up_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_lv_up_minutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_up_second"
        app:layout_constraintTop_toTopOf="@+id/bt_up_second" />

    <Button
        android:id="@+id/bt_down_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_lv_down_second"
        app:layout_constraintEnd_toStartOf="@+id/bt_down_minutes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_up_second" />

    <Button
        android:id="@+id/bt_down_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_lv_down_minutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_down_second"
        app:layout_constraintTop_toTopOf="@+id/bt_down_second" />

</androidx.constraintlayout.widget.ConstraintLayout>